Fix stretched img on Safari
The height must be set to 100%, as auto picks the original img height.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -568,12 +568,14 @@ blockquote {
 
 .screenshots {
   display: flex;
+  display:-webkit-flex;
   width: 100%;
   overflow-x: auto;
 
   .column {
     width: 40%;
-    height: auto;
+    height: 100%;
+
     border-radius: 15px;
   }
 
